tests/types/errors/query_source_not_list.mochi
let x = 1
let q = from n in x select n

